--- a/style.css
+++ b/style.css
@@ -1,17 +1,31 @@
 body {
   font-family: rubik;
+  background-color: #ef5350 ;
+  margin: 0;
+}
+
+header {
+  text-align: center;
+  padding: 20px;
+}
+
+.headerImg {
+  width: 250px;
 }
 
 .navbar {
-  /*add styles for the navbar here*/
+  background-color: #386bbb;
+  padding: 10px 20px;
 }
 
+/* Mobile First */
 .hamburger {
-  /*add styles for the hamburger here*/  
+  color: white; 
+  text-align: right;
 }
 
-.container {
-  /*add styles for the container here*/
+.menu{
+  display: none ;
 }
 
 h1 {
@@ -21,7 +35,16 @@ h1 {
 }
 
 #pokedex {
-  /*add styles for pokedex here*/
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  align-items: center;
+}
+
+#pokedex img{
+  width: auto;
+  height: 200px;
 }
 
 .card {
@@ -29,40 +52,76 @@ h1 {
   background-color: #fff;
   color: #222;
   margin:10px;
+  width: 250px;
+  text-align: center;
 }
 
 .card-title {
   font-size: 32px;
   font-weight: bold;
-  margin-top: 0;
+  margin: 0;
 }
 .card-subtitle {
   margin-top: 5px;
   font-weight: lighter;
+  color: #757575;
 }
 
 .card-image {
   height: 180px;
 }
 
-.menu {
-  /*add styles for the menu here*/
-}
-
-
-header {
-  /*add styles for the header here*/
-}
-
-.headerImg {
-  /*add styles for the header image here*/
-}
 
 .social {
-  /*add styles for the social icons here*/
+  padding: 0 100px;
+  list-style: none;
+  display: flex;
+  color: white;
+  justify-content: space-between;
 }
 
 footer {
-  /*add styles for the footer here*/
+  padding-top: 30px;
 }
 
+/* Tablet size */
+@media (min-width: 750px) and (max-width: 959px) {
+  #pokedex{
+    flex-flow: row wrap;
+    justify-content: center;
+  }
+
+  .social {
+    padding: 0 200px;
+  }
+}
+
+/* Computer size */
+@media (min-width: 960px){
+  .hamburger {
+    display: none;
+  }
+
+  .menu {
+    display: flex;
+    margin: 0;
+    color: white;
+    list-style: none;
+    justify-content: flex-end;
+  }
+  .menu li {
+    padding: 0px 10px;
+  }
+  #pokedex{
+    flex-flow: row wrap;
+    justify-content: center;
+  }
+
+  .social{
+    justify-content: center;
+  }
+
+  .social_icon {
+    padding: 0px 100px
+  }
+}
